syntax = "proto3";

package user_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/api/annotations.proto";
import "validate/validate.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/prostasmosta/auth/grpc/pkg/user_v1;user_v1";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "User Auth API"
    version: "1.0.0"
    contact: {
      name: "Slava Garipov"
      email: ""
    };
  };

  host: "localhost:8080",
  schemes: HTTP,
  schemes: HTTPS,
  consumes: "application/json",
  produces: "application/json",
};

service UserV1 {
  rpc Create(CreateRequest) returns (CreateResponse){
    option (google.api.http) = {
      post: "/user/v1/create"
      body: "*"
    };
  }

  rpc Get(GetRequest) returns (GetResponse){
    option (google.api.http) = {
      get: "/user/v1"
    };
  }

  rpc Update(UpdateRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      patch: "/user/v1"
      body: "*"
    };
  }

  rpc Delete(DeleteRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      delete: "/user/v1"
    };
  }
}

enum Role {
  ROLE_USER = 0;
  ROLE_ADMIN = 1;
}

message UserInfo {
  string name = 1 [(validate.rules).string = {min_len: 2, max_len: 30}];
  string email = 2 [(validate.rules).string.email = true];
  Role role = 3 [(validate.rules).enum.defined_only = true];
}

message User {
  int64 id = 1;
  UserInfo info = 2;
  string password = 3;
  string password_confirm = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message UpdateUserInfo {
  google.protobuf.StringValue name = 1;
  google.protobuf.StringValue email = 2;
  Role role = 3;
}

message CreateRequest {
  UserInfo info = 1 [(validate.rules).message.required = true];
  string password = 2 [(validate.rules).string.min_len = 5];
  string password_confirm = 3 [(validate.rules).string.min_len = 5];
}

message CreateResponse {
  int64 id = 1;
}

message GetRequest {
  int64 id = 1 [(validate.rules).int64.gte = 0];
}

message GetResponse {
  int64 id = 1;
  UserInfo info = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message UpdateRequest {
  int64 id = 1 [(validate.rules).int64.gte = 0];
  UpdateUserInfo info = 2;
}

message DeleteRequest {
  int64 id = 1 [(validate.rules).int64.gte = 0];
}
